<resources>
    <string name="app_name">Notifix</string>
    <string name="menu_add_notification">Add notification</string>
    <string name="menu_preview_notification">Preview</string>
    <string name="title_activity_notifications">Your notifications</string>
    <string name="title_activity_add_notification">Add Notification</string>
    <string name="title_activity_select_zone">Select location</string>
    <string name="title_activity_add_trigger_notification">Add trigger</string>
    <string name="title_bottom_sheet_add_trigger_notification">Select trigger type</string>
    <string name="title_activity_configure_contact_trigger">Configure contact</string>

    <string name="trigger_SMS">SMS</string>
    <string name="trigger_PHONE">PHONE</string>
    <string name="trigger_TIME">TIME</string>
    <string name="trigger_ZONE">ZONE</string>
    <string name="menu_close_action">Close</string>

    <string name="config_num_select_contact">Select contact</string>
    <string name="config_time">Select time</string>
    <string name="config_zone">Select location</string>
    <string name="use_num_select_contact">Use contact</string>
    <string name="no_phone">No phone</string>
    <string name="notification_action_dismiss">DISMISS</string>
</resources>
