<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Toolbar.White"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_bottom_sheet_add_trigger_notification" />

    <TextView
        android:id="@+id/triggerPhone"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_phone_in_talk"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/trigger_PHONE" />

    <TextView
        android:id="@+id/triggerSms"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_sms"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/trigger_SMS" />

    <TextView
        android:id="@+id/triggerTime"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_av_timer"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/trigger_TIME" />

    <TextView
        android:id="@+id/triggerZone"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_location"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/trigger_ZONE" />

</LinearLayout>